v5.1.0/_sources/generated/pcdsdevices.epics_motor.SmarActOpenLoopPositioner.rst.txt
pcdsdevices.epics\_motor.SmarActOpenLoopPositioner
==================================================

.. currentmodule:: pcdsdevices.epics_motor

.. autoclass:: SmarActOpenLoopPositioner

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - done
          - :class:`~pcdsdevices.signal.InternalSignal`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pv_positioner.PVPositionerComparator`
    
        * - setpoint
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:SET_TOTAL_STEP_COUNT``
          - 
          - normal
          - 
    
        * - readback
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:TOTAL_STEP_COUNT``
          - 
          - normal
          - 
    
        * - open_loop
          - :class:`~pcdsdevices.epics_motor.SmarActOpenLoop`
          - 
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: done_comparator
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: set
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate
    .. autoattribute:: actuate_value
    .. autoattribute:: atol
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: settle_time
    .. autoattribute:: stop_signal
    .. autoattribute:: stop_value
    .. autoattribute:: timeout
    
    